--- a/mod2_Assignment/styles.css
+++ b/mod2_Assignment/styles.css
@@ -1,5 +1,12 @@
+html *
+{
+
+   font-family: Arial, Times !important;
+}
+
 * {
   box-sizing: border-box;
+
 }
 
 h1 {
@@ -9,8 +16,8 @@ h1 {
 
 span{
     font-size: 1em;
-    border-bottom: 3px solid;
-    border-left: 3px solid;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
     display: inline-block;
     width: 120px;
     text-align: center;
@@ -20,12 +27,24 @@ span{
 .container{
   position:relative;
   margin: auto;
-
   height: 150px;
   background-color: gray;
   border-style: solid;
-  margin: 20px;
+  margin: 10px;
 
+}
+
+#pink{
+    background-color:pink;
+}
+
+#red{
+    color: white;
+    background-color:pink;
+}
+
+#yellow{
+    background-color:yellow;
 }
 
 div{
@@ -34,6 +53,7 @@ div{
 
 p{
     text-align: left;
+    font-family: serif;
 }
 
 .row{
@@ -43,7 +63,7 @@ p{
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+
   }
   .col-lg-1 {
     width: 8.33%;
@@ -86,7 +106,7 @@ p{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+
   }
   .col-md-1 {
     width: 8.33%;
@@ -129,7 +149,7 @@ p{
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
+
   }
   .col-sm-1 {
     width: 8.33%;
